moved codebase under ./spark/src (from ./src)